Inventory, stores, categories created

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/core": "^0.37.0",
     "@convex-dev/auth": "^0.0.90",
     "@tailwindcss/vite": "^4.1.17",
+    "browser-image-compression": "^2.0.2",
     "convex": "^1.28.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
