--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
     "convex": "^1.28.2",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
