--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/core": "^0.37.0",
     "@convex-dev/auth": "^0.0.90",
+    "@oslojs/crypto": "^1.0.1",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "resend": "^6.7.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
