--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browser-image-compression": "^2.0.2",
     "convex": "^1.28.2",
     "date-fns": "^4.1.0",
+    "pdfjs-dist": "^5.4.624",
     "react": "^19.1.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.1.1",
